# vscar

./: README.md
back/: .gitignore  README.md  package-lock.json  package.json  reset_db.ts  vercel.json
back/config/: configuration.ts
back/src/: app.controller.ts  app.module.ts  main.ts
back/src/cars/: cars.controller.ts  cars.module.ts  (+1 more)
back/vscar-back-fastapi/: Dockerfile  Makefile  README.md  db.py  main.py  pyproject.toml
back/vscar-back-gin/: .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum
back/vscar-back-ktor/: Makefile  README.md  build.gradle.kts  settings.gradle.kts
back/vscar-back-nestjs/: Dockerfile  Makefile  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reset_db.ts
back/vscar-back-rocket/: .env  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  test_perf.py
back/vscar-back-rocket/src/: main.rs  tests.rs
back/vscar-back-spring/: Makefile  settings.gradle
back_rs/hello-rocket/: .env  Cargo.toml
back_rs/hello-rocket/src/: main.rs
car-vs-be/: package-lock.json  package.json
car-vs-be/src/: app.module.ts
car-vs-fe/: README.md  karma.conf.js
features/: compare.feature  search.feature  share.feature
front/: .gitignore  Dockerfile  Makefile  README.md  angular.json  eslint.config.js  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json
front/src/: index.html  main.ts  styles.scss  test.ts
k8s/: Makefile
k8s/manifests/: configmap.yaml  fastapi.yaml  gin.yaml  ingress.yaml  ktor.yaml  namespace.yaml  nestjs.yaml  rocket.yaml  spring.yaml
perf_test/: pyproject.toml  run_perf.py
tests/: Makefile  README.md  build_dockers.py  pyproject.toml
tests/api/: test_api.py
tests/func/: conftest.py  test_func.py
tests/func/features/: compare.feature  search.feature
tests/func/features/steps/: common.py
tests/k6/: Makefile  README.md  package.json  performance_suite.js
tests/perf_test/: Analysis.ipynb  Makefile  perf_utils.py  run_perf.py  run_perf_back.py  test_perf.py
tests/perf_test/data/docker/: vscar-back-fastapi.csv  vscar-back-fastapi_par.csv  vscar-back-fastapi_seq.csv  vscar-back-gin.csv  vscar-back-gin_par.csv  vscar-back-gin_seq.csv  vscar-back-ktor.csv  vscar-back-ktor_par.csv  vscar-back-ktor_seq.csv  vscar-back-nestjs.csv  vscar-back-nestjs_par.csv  vscar-back-nestjs_seq.csv  vscar-back-rocket.csv  vscar-back-rocket_par.csv  vscar-back-rocket_seq.csv  vscar-back-spring.csv  vscar-back-spring_par.csv  vscar-back-spring_seq.csv
tests/perf_test/data/local/: vscar-back-fastapi.csv  vscar-back-fastapi_par.csv  vscar-back-fastapi_seq.csv  vscar-back-gin.csv  vscar-back-gin_par.csv  vscar-back-gin_seq.csv  vscar-back-ktor.csv  vscar-back-ktor_par.csv  vscar-back-ktor_seq.csv  vscar-back-nestjs.csv  vscar-back-nestjs_par.csv  vscar-back-nestjs_seq.csv  vscar-back-rocket.csv  vscar-back-rocket_par.csv  vscar-back-rocket_seq.csv  vscar-back-spring.csv  vscar-back-spring_par.csv  vscar-back-spring_seq.csv
tests/playwright/: .gitignore  Makefile  README.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
tests/playwright/playwright-report/: index.html
tests/playwright/tests/backend/: api.spec.ts
tests/playwright/tests/frontend/: compare.spec.ts  pom.ts  search.spec.ts
(+95 files in other folders)
