[project]
name = "perf-test"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["click", "ruff", "requests", "loguru"]

[tool.ruff]
exclude = [
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "site-packages",
    "venv",
]

indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212"]

fixable = ["ALL"]


[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101", "E501"]
