[project]
name = "vscar-back-fastapi"
version = "0.1.0"
description = "FastAPI backend for vscar app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.0",
    "pymongo>=4.15.3",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["INP001", "D203", "D213", "COM812"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"**/test_*" = ["S101", "FBT001"]
"**/steps/*" = ["S101", "FBT001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
