[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
# mongodb = "2.8.2"
serde_json = "1.0.117"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.21"
futures = "0.3"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["mongodb"]
